crates/weaver-e2e/tests/snapshots/python_decorator_stack.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 6:5 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"attachments\": {\n      \"bundle_rule\": \"leading_trivia\",\n      \"decorators\": [\n        \"@trace\",\n        \"@trace\"\n      ],\n      \"doc_comments\": [],\n      \"normalized\": {\n        \"decorators\": [\n          \"trace\",\n          \"trace\"\n        ]\n      }\n    },\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"metrics\": {\n      \"cyclomatic\": 1,\n      \"lines\": 2\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"signature\": {\n      \"display\": \"def run() -> None:\",\n      \"params\": [],\n      \"returns\": \"None\"\n    },\n    \"structure\": {\n      \"branches\": [],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"function\",\n        \"language\": \"python\",\n        \"name\": \"run\",\n        \"range\": {\n          \"end\": {\n            \"column\": 8,\n            \"line\": 6\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 5\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
