crates/weaver-e2e/tests/snapshots/python_google_docstring.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 1:5 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"card_version\": 1,\n    \"doc\": {\n      \"docstring\": \"Parse words.\\n\\n    Args:\\n        text: Input text.\\n    \",\n      \"source\": \"tree_sitter\",\n      \"summary\": \"Parse words.\"\n    },\n    \"etag\": \"<etag>\",\n    \"metrics\": {\n      \"cyclomatic\": 1,\n      \"lines\": 7\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"signature\": {\n      \"display\": \"def parse(text: str) -> list[str]:\",\n      \"params\": [\n        {\n          \"name\": \"text\",\n          \"type\": \"str\"\n        }\n      ],\n      \"returns\": \"list[str]\"\n    },\n    \"structure\": {\n      \"branches\": [],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"function\",\n        \"language\": \"python\",\n        \"name\": \"parse\",\n        \"range\": {\n          \"end\": {\n            \"column\": 23,\n            \"line\": 6\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 0\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
