crates/weaver-e2e/tests/snapshots/python_import_block.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 1:1 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"interstitial\": {\n      \"imports\": {\n        \"groups\": [\n          [\n            \"os\",\n            \"pathlib import Path\"\n          ]\n        ],\n        \"normalized\": [\n          \"os\",\n          \"pathlib import Path\"\n        ],\n        \"raw\": \"import os\\nfrom pathlib import Path\",\n        \"source\": \"tree_sitter\"\n      }\n    },\n    \"metrics\": {\n      \"cyclomatic\": 1,\n      \"lines\": 4\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"structure\": {\n      \"branches\": [],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"module\",\n        \"language\": \"python\",\n        \"name\": \"imports\",\n        \"range\": {\n          \"end\": {\n            \"column\": 24,\n            \"line\": 3\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 0\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
