crates/weaver-e2e/tests/snapshots/refusal_position_out_of_range.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 99:99 --detail structure",
  "status": 1,
  "stdout": "{\n  \"refusal\": {\n    \"message\": \"observe get-card: position 99:99 is outside the bounds of the file\",\n    \"reason\": \"position_out_of_range\",\n    \"requested_detail\": \"structure\"\n  },\n  \"status\": \"refusal\"\n}",
  "stderr": ""
}
