crates/weaver-e2e/tests/snapshots/refusal_unsupported_language.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 1:1 --detail structure",
  "status": 1,
  "stdout": "{\n  \"refusal\": {\n    \"message\": \"observe get-card: unsupported language for path <path>\",\n    \"reason\": \"unsupported_language\",\n    \"requested_detail\": \"structure\"\n  },\n  \"status\": \"refusal\"\n}",
  "stderr": ""
}
